--- a/src/templates/components/participation-info-modal.html
+++ b/src/templates/components/participation-info-modal.html
@@ -2,7 +2,7 @@
 {% load staticfiles projects_tags %}
 
 
-{% block extra_classes %}-public {% endblock %}
+{% block extra_classes %}-public js-publicInfoModal{% endblock %}
 
 {% block title_modal %}
 
@@ -11,5 +11,5 @@
 {% block content %}
 <h1>Quase lá 😉</h1>
 <p>O wikilegis precisa de um prazo de até 2 dias úteis...</p>
-<button class="app-button -green js-closeModal">Fechar</button>
+<button class="app-button -green js-close">Fechar</button>
 {% endblock content %}
