--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -44,6 +44,8 @@
 {% block page_js %}
 <script src="{% static 'jquery-ui-dist/jquery-ui.min.js' %}"></script>
 <script src="{% static '/js/components/validationModal/view.js' %}"></script>
+<script src="{% static 'js/components/publicParticipationModal/view.js' %}"></script>
+<script src="{% static 'js/components/publicParticipationModal/controller.js' %}"></script>
 <script src="{% static 'js/components/congressmanAutocomplete/view.js' %}"></script>
 {% if page == 'editor' %}
 <script src="{% static '/js/utils/position.js' %}"></script>
