--- a/src/templates/emails/participation_request.html
+++ b/src/templates/emails/participation_request.html
@@ -1,4 +1,3 @@
-<p>O consultor {{owner}}, solicita a participação pública dodocumento "{{document_title}}" ao deputado {{congressman}}.</p>
-<p>Contato do {{congressman}}</p>
+<p>O consultor(a) {{owner}}, solicita a participação pública do dodocumento "{{document_title}}" ao(à) dep. {{congressman}}.</p>
 <p>Email: {{email}}</p>
 <p>Telefone: {{phone}}</p>
