--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -55,6 +55,9 @@
 @import 'components/tool-bar';
 @import 'components/dashboard-list';
 @import 'components/contextual-toolbar';
+@import 'components/info-message';
+@import 'components/link-back';
+@import 'components/error-list';
 
 // Vendor
 @import 'vendor/tooltip';
