--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -152,11 +152,18 @@ body.-white .nav-bar {
     margin-left: 1.5rem;
     padding-left: 1.5rem;
 
+    cursor: pointer;
+
     border-left: 1px solid $color-grayish;
 
     &:hover {
       & > .dropdown > .list {
-        display: flex;
+        visibility: visible;
+
+        transition-delay: 0s, 0s, .3s;
+        transform: translateY(0%);
+
+        opacity: 1;
       }
     }
 
@@ -171,8 +178,6 @@ body.-white .nav-bar {
       position: relative;
 
       display: flex;
-      display: flex;
-      align-items: center;
       align-items: center;
 
       margin-top: .25rem;
@@ -212,16 +217,23 @@ body.-white .nav-bar {
         top: 1.3rem;
         left: -.2rem;
 
-        display: none;
+        display: flex;
+        visibility: hidden;
+        overflow: hidden;
+        overflow-y: auto;
         flex-direction: column;
 
         width: 25rem;
+        max-height: 70vh;
         padding: .5rem 0;
 
+        transition: all .3s ease-in-out 0s, visibility 0s linear .2s, z-index 0s linear .01s;
+        transform: translateY(-2%);
+
+        opacity: 0;
         border: 1px solid $color-grayish;
         background-color: #FFF;
-
-        @include card-shadow;
+        box-shadow: 3px 3px 4px rgba(0, 0, 0, .08);
 
         & > .title {
           display: flex;
@@ -313,9 +325,10 @@ body.-white .nav-bar {
             }
 
             & > .item {
+              font-size: $font-size-micro;
+
               display: flex;
               align-items: center;
-              font-size: $font-size-micro;
 
               &.-versions {
                 @include icon('document');
@@ -362,6 +375,46 @@ body.-white .nav-bar {
           margin: .5rem 0;
 
           color: $color-grayish;
+        }
+      }
+    }
+
+    & > .breadcrumb {
+      display: flex;
+      align-items: center;
+
+      margin-top: .25rem;
+
+      & > * + * {
+        margin-left: .5rem;
+      }
+
+      & > a {
+        font-size: $font-size-micro;
+
+        display: flex;
+        align-items: center;
+
+        color: $color-deep-gray;
+
+        &:hover {
+          text-decoration: underline;
+
+          color: $color-brand;
+        }
+
+        &:not(:first-child)::before {
+          display: inline-block;
+
+          width: .375rem;
+          height: .375rem;
+          margin-right: .5rem;
+
+          content: '';
+
+          opacity: .8;
+          border-radius: 50%;
+          background-color: $color-deep-gray;
         }
       }
     }
