--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -11,25 +11,47 @@
   }
 </style>
 {% endblock extracss %}
+{% block navbar %}
+<div class="nav-bar js-navbar -admin js-owner">
+  <div class="nav-burger"></div>
+  <a href="/" class="brand -beta">Wikilegis</a>
 
+  <div class="project">
+    <span class="title js-documentTitle">Untitled Document</span>
+    <ul class="breadcrumb">
+      <a href="#">Editar Grupo Fechado</a>
+    </ul>
+  </div>
+  <div class="tools">
+    <a href="/dashboard/">Meus documentos</a>
+  </div>
+
+</div>
+{% endblock %}
 {% block content %}
 
 <main class="section-group">
   <header>
+    {% if object %}
+    <h2>Editar Grupo Fechado</h2>
+    {% else %}
     <h2>Criar Grupo Fechado</h2>
-    <div class="close-icon"></div>
+    {% endif %}
+
+    <a href="#" class="link-back">Voltar</a>
+
   </header>
-  <form method="POST">
+  <form method="POST" id="invited_group_form">
     {% csrf_token %}
     {{form.non_field_errors}}
     <div class="input-group">
       <div class="input-text">
-        <input type="text" name="group_name" id="id_group_name">
-        <label for="id_group_name">Nome do grupo: </label>
+        <input type="text" name="group_name" id="id_group_name" {% if object %}value="{{ object.thematic_group.name }}"{% endif %}>
+        <label for="id_group_name">Nome do grupo:</label>
       </div>
-      <div class="input-text">
+      <div class="input-text -required">
         {{form.closing_date.errors}}
-        <input type="text" name="closing_date" required="" id="id_closing_date">
+        {{form.closing_date}}
         <label for="id_closing_date">Data de encerramento:</label>
       </div>
     </div>
@@ -42,30 +64,61 @@
         <label for="name">Buscar perfis por nome ou email: </label>
         <div class="filter js-searchFilter">Filtros</div>
       </div>
-      <div class="filters">
-        <span class="title _hidden js-title">Filtros adicionados:</span>
-        <ul class="tags js-tags"></ul>
-        <div class="filter js-clearFilters">Limpar</div>
+      <div class="filters _hidden">
+        <span class="title js-title">Filtros adicionados:</span>
+        <ul class="list js-tags">
+          <span class="item">Filtro 1</span>
+          <span class="item">Filtro 2</span>
+          <span class="item">Filtro 3</span>
+        </ul>
+        <div class="clear js-clearFilters">Limpar Filtros</div>
       </div>
     </div>
 
-    <div class="input-group">
+    <div class="input-group js-participants">
+      {% if object.thematic_group.participants.all %}
+      {% for participant in object.thematic_group.participants.all %}
+      <input type="hidden" name="participants" value="{{participant.id}}">
+      {% endfor %}
+      {% endif %}
       <div class="input-profile -empty">
         <span class="label"><b class="js-countSelectables">0</b>Perfis encontrados com o filtro </span>
         <div class="profiles js-inputProfile">
         </div>
       </div>
       <div class="input-profile -empty">
-        <span class="label"><b class="js-countSelecteds">0</b>Participantes atuais no grupo</span>
+        <span class="label"><b class="js-countSelecteds">{{object.thematic_group.participants.count|default_if_none:0}}</b>Participantes atuais no grupo</span>
         <div class="profiles js-selectedProfile">
+          {% if object.thematic_group.participants.all %}
+          {% for participant in object.thematic_group.participants.all %}
+            <div class="user-profile js-user" data-user-id="{{ participant.id }}">
+              <img class="avatar" src="{{participant.profile.avatar|default_if_none:'/new-wikilegis/static/img/avatar.png'}}">
+              <div class="info">
+                <span class="name">{{ participant.get_full_name }}</span>
+                {% for theme in participant.themes.all %}
+                  <div class="tags">
+                    <div class="theme-tag">
+                      <span class="dot" style="background-color: {{theme.color}};"></span>
+                       {{theme.name}}
+                    </div>
+                  </div>
+                {% endfor %}
+              </div>
+              <div class="action">
+                <div class="remove"></div>
+              </div>
+            </div>
+          {% endfor %}
+          {% endif %}
         </div>
       </div>
     </div>
 
-    <button class="app-button -green">Salvar</button>
+    <a class="app-button -green js-openConfirmFormButton">Continuar</a>
   </form>
 </main>
 {% include "components/filter-modal.html" %}
+{% include "components/confirm-form-modal.html" %}
 
 {% endblock content %}
 
@@ -75,6 +128,7 @@
 <script src="{% static 'js/components/filterModal/view.js' %}"></script>
 <script src="{% static 'js/components/filterModal/controller.js' %}"></script>
 <script src="{% static 'js/components/themeAutocomplete/view.js' %}"></script>
+<script src="{% static 'js/components/confirmFormModal/view.js' %}"></script>
 {# <script src="{% static 'js/components/groupAutocomplete/views.js' %}"></script> #}
 <script src="{% static 'js/pages/inviteParticipants.js' %}"></script>
 {% endblock page_js %}
