--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -52,6 +52,8 @@
 <script src="{% static '/js/vendor/silegismg-editor-articulacao-plain-js-polyfill.js' %}"></script>
 <script src="{% static '/js/components/infoMessage/view.js' %}"></script>
 <script src="{% static '/js/components/documentEditor/view.js' %}"></script>
+<script src="{% static '/js/components/toolBar/controller.js' %}"></script>
+<script src="{% static '/js/components/toolBar/view.js' %}"></script>
 <script src="{% static '/js/components/contextualToolbar/view.js' %}"></script>
 <script src="{% static '/js/components/navBar/view.js' %}"></script>
 <script src="{% static '/js/pages/editDocument.js' %}"></script>
