--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -13,13 +13,18 @@
       <h3>{{ excerpt.content|safe }}</h3>
     </div>
     {% else %}
-    <p class="excerpt-wrapper {% excerpt_classes excerpt %} {% if not excerpt.suggestions.all %}-reduce{% endif %} js-excerptWrapper">
-      <b>{% excerpt_numbering excerpt %}</b>
-      {% if not excerpt.suggestions.all %}
-      <span class="js-defaultText">...</span>
+      {% to_reduce group excerpt as reduce %}
+      {% if reduce %}
+      <p class="excerpt-wrapper {% excerpt_classes excerpt %} -reduce js-excerptWrapper">
+        <b>{% excerpt_numbering excerpt %}</b>
+        <span class="js-defaultText">...</span>
+      </p>
+      {% else %}
+      <p class="excerpt-wrapper {% excerpt_classes excerpt %} js-excerptWrapper">
+        <b>{% excerpt_numbering excerpt %}</b>
+        {% include "components/document-excerpt.html" with excerpt=excerpt %}
+      </p>
       {% endif %}
-      {% include "components/document-excerpt.html" with excerpt=excerpt %}
-    </p>
     {% endif %}
   {% endfor %}
 </article>
