Create save message

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -59,6 +59,7 @@
 @import 'components/info-message';
 @import 'components/link-back';
 @import 'components/error-list';
+@import 'components/save-message';
 
 // Vendor
 @import 'vendor/tooltip';
