Style highlighted excerpts when toolbar is open

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -51,6 +51,7 @@
 @import 'components/start-header';
 @import 'components/howto-button';
 @import 'components/document-editor';
+@import 'components/silegismg-editor-articulacao';
 @import 'components/side-bar';
 @import 'components/tool-bar';
 @import 'components/dashboard-list';
