--- a/src/templates/components/contextual-toolbar.html
+++ b/src/templates/components/contextual-toolbar.html
@@ -1,14 +1,14 @@
 <div class="contextual-toolbar js-contextualToolbar _hidden">
-  <div class="js-typeList">
-    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="titulo">Título</button>
-    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="capitulo">Capítulo</button>
-    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="secao">Seção</button>
-    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="subsecao">Subseção</button>
-    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="continuacao">Continuação</button>
-    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="artigo">Artigo</button>
-    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="paragrafo">Parágrafo</button>
-    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="inciso">Inciso</button>
-    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="alinea">Alínea</button>
-    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="item">Item</button>
+  <div class="js-typeList list">
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="titulo">Título</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="capitulo">Capítulo</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="secao">Seção</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="subsecao">Subseção</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="continuacao">Continuação</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="artigo">Artigo</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="paragrafo">Parágrafo</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="inciso">Inciso</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="alinea">Alínea</button>
+    <button tabindex="2" class="item js-excerptType _hidden" data-excerpt-type="item">Item</button>
   </div>
 </div>
