--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -51,10 +51,10 @@ body.-white .nav-bar {
 
     border-bottom: 1px solid $color-grayish;
     background: #FFF;
+  }
 
-    & > .brand {
-      padding: 0;
-    }
+  &.-admin > .brand {
+    padding: 0;
   }
 
   &.-shadow {
@@ -68,40 +68,36 @@ body.-white .nav-bar {
   &.-edit {
     color: #FFF;
     background-color: $color-deep-gray !important;
+  }
 
-    & > .brand {
-      color: #FFF;
+  &.-edit > .brand {
+    color: #FFF;
+  }
 
-      &.-beta::after {
-        opacity: .8;
-        color: #FFF;
-      }
-    }
+  &.-edit > .brand.-beta::after {
+    opacity: .8;
+    color: #FFF;
+  }
 
-    & > .project {
-      & > .title {
-        color: #FFF;
-      }
+  & > .project > .title {
+    color: #FFF;
+  }
 
-      & > .dropdown {
-        &::after {
-          background-color: #FFF;
-        }
+  & > .project > .dropdown::after {
+    background-color: #FFF;
+  }
 
-        &.-closed::before {
-          background-color: #FFF;
-        }
-      }
-    }
+  & > .project > .dropdown.-closed::before {
+    background-color: #FFF;
+  }
 
-    & > .tools > a {
-      opacity: .8;
-      color: #FFF;
+  & > .tools > a {
+    opacity: .8;
+    color: $color-gray;
 
-      &:hover {
-        opacity: 1;
-        color: #FFF;
-      }
+    &:hover {
+      opacity: 1;
+      color: $color-gray;
     }
   }
 
@@ -125,24 +121,24 @@ body.-white .nav-bar {
     @include bp-smallonly {
       padding: 0;
     }
+  }
 
-    &.-beta::after {
-      font-size: .5rem;
-      font-weight: 900;
+  & > .brand.-beta::after {
+    font-size: .5rem;
+    font-weight: 900;
 
-      position: relative;
-      right: 1.875rem;
-      bottom: -.75rem;
+    position: relative;
+    right: 1.875rem;
+    bottom: -.75rem;
 
-      display: block;
+    display: block;
 
-      width: 0;
+    width: 0;
 
-      content: 'Beta';
-      letter-spacing: 2px;
+    content: 'Beta';
+    letter-spacing: 2px;
 
-      color: $color-deep-gray;
-    }
+    color: $color-deep-gray;
   }
 
   & > .tools {
@@ -153,33 +149,33 @@ body.-white .nav-bar {
     margin-left: auto;
 
     color: $color-gray;
+  }
 
-    & > * + * {
-      margin-left: 3rem;
+  & > .tools > * + * {
+    margin-left: 3rem;
+  }
+
+  & > .tools > a {
+    font-size: .875rem;
+    font-weight: bold;
+
+    display: flex;
+    align-items: center;
+
+    height: 100%;
+
+    text-transform: uppercase;
+
+    &:hover {
+      color: $color-brand;
     }
+  }
 
-    & > a {
-      font-size: .875rem;
-      font-weight: bold;
+  & > .tools > a.-active {
+    color: $color-brand;
 
-      display: flex;
-      align-items: center;
-
-      height: 100%;
-
-      text-transform: uppercase;
-
-      &:hover {
-        color: $color-brand;
-      }
-
-      &.-active {
-        color: $color-brand;
-
-        &:hover {
-          color: lighten($color-brand, 5%);
-        }
-      }
+    &:hover {
+      color: lighten($color-brand, 5%);
     }
   }
 
@@ -196,276 +192,279 @@ body.-white .nav-bar {
 
     border-left: 1px solid $color-grayish;
 
+    &:hover > .dropdown > .list {
+      visibility: visible;
+
+      transition-delay: 0s, 0s, .3s;
+      transform: translateY(0%);
+
+      opacity: 1;
+    }
+  }
+
+  & > .project > .title {
+    font-size: $font-size-mili;
+    font-weight: bold;
+
+    color: $color-deep-gray;
+  }
+
+  & > .project > .dropdown {
+    position: relative;
+
+    display: flex;
+    align-items: center;
+
+    margin-top: .25rem;
+    margin-right: 1rem;
+
+    cursor: pointer;
+  }
+
+  & > .project > .dropdown::after {
+    display: inline-flex;
+
+    width: .75rem;
+    height: .75rem;
+    margin-left: .25rem;
+
+    content: '';
+
+    background-color: $color-deep-gray;
+
+    mask-image: url('../../static/img/arrow.svg');
+    mask-repeat: no-repeat;
+    mask-position: center;
+    mask-size: contain;
+  }
+
+  & > .project > .dropdown > span {
+    font-size: $font-size-micro;
+  }
+
+  & > .project > .dropdown > span.-closed {
+    @include mask-icon('padlock');
+  }
+
+  & > .project > .dropdown > span.-closed::before {
+    margin-right: .25rem;
+
+    background-color: $color-deep-gray;
+  }
+
+  & > .project > .dropdown > .list {
+    position: absolute;
+    top: 1.3rem;
+    left: -.2rem;
+
+    display: flex;
+    visibility: hidden;
+    overflow: hidden;
+    overflow-y: auto;
+    flex-direction: column;
+
+    width: 25rem;
+    max-height: 70vh;
+    padding: .5rem 0;
+
+    transition: all .3s ease-in-out 0s, visibility 0s linear .2s, z-index 0s linear .01s;
+    transform: translateY(-2%);
+
+    opacity: 0;
+    border: 1px solid $color-grayish;
+    background-color: #FFF;
+    box-shadow: 3px 3px 4px rgba(0, 0, 0, .08);
+  }
+
+  & > .project > .dropdown > .list > .title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    padding: .5rem 1.25rem;
+
+    cursor: text;
+  }
+
+  & > .project > .dropdown > .list > .title > span {
+    font-size: $font-size-centi;
+    font-weight: bold;
+    line-height: 1.4;
+
+    color: $color-deep-gray;
+  }
+
+  & > .project > .dropdown > .list > .title > span.-closed {
+    @include mask-icon('padlock');
+  }
+
+  & > .project > .dropdown > .list > .title > span.-closed::before {
+    font-size: $font-size-micro;
+
+    margin-right: .35rem;
+
+    background-color: $color-deep-gray;
+  }
+
+  & > .project > .dropdown > .list > .title > a {
+    font-size: $font-size-micro;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: .5rem 0;
+
+    cursor: pointer;
+    letter-spacing: .5px;
+
+    color: $color-brand;
+
     &:hover {
-      & > .dropdown > .list {
-        visibility: visible;
+      opacity: .8;
+    }
+  }
 
-        transition-delay: 0s, 0s, .3s;
-        transform: translateY(0%);
+  & > .project > .dropdown > .list > .title.-add {
+    @include mask-icon('add');
+  }
 
-        opacity: 1;
+  & > .project > .dropdown > .list > .title.-add::before {
+    font-size: $font-size-nano;
+
+    margin-right: .35rem;
+
+    background-color: $color-brand;
+  }
+
+  & > .project > .dropdown > .list > a {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 1rem 1.5rem;
+
+    color: $color-deep-gray;
+
+    &:hover {
+      & > span,
+      & > .info > .item {
+        color: $color-brand;
+      }
+
+      & > .info > .item::before {
+        background-color: $color-brand;
       }
     }
+  }
 
-    & > .title {
-      font-size: $font-size-mili;
-      font-weight: bold;
+  & > .project > .dropdown > .list > a > span {
+    font-size: $font-size-mili;
+    line-height: 1.4;
+  }
 
-      color: $color-deep-gray;
+  & > .project > .dropdown > .list > a > .info {
+    display: flex;
+    align-items: center;
+  }
+
+  & > .project > .dropdown > .list > a > .info > * + * {
+    margin-left: .75rem;
+  }
+
+  & > .project > .dropdown > .list > a > .info.-full {
+    flex-wrap: wrap;
+    justify-content: flex-end;
+
+    width: 9rem;
+  }
+
+  & > .project > .dropdown > .list > a > .info.-full > .-green {
+    margin-top: .5rem;
+  }
+
+  & > .project > .dropdown > .list > a > .info > .item {
+    font-size: $font-size-micro;
+
+    display: flex;
+    align-items: center;
+  }
+
+  & > .project > .dropdown > .list > a > .info > .item::before {
+    font-size: $font-size-micro;
+
+    background-color: $color-deep-gray;
+  }
+
+  & > .project > .dropdown > .list > a > .info > .item.-versions {
+    @include mask-icon('document');
+  }
+
+  & > .project > .dropdown > .list > a > .info > .item.-participants {
+    @include mask-icon('avatar');
+  }
+
+  & > .project > .dropdown > .list > a > .info > .item.-opinions {
+    @include mask-icon('comment-black');
+  }
+
+  & > .project > .dropdown > .list > a > .info > .item.-versions::before,
+  & > .project > .dropdown > .list > a > .info > .item.-participants::before,
+  & > .project > .dropdown > .list > a > .info > .item.-opinions::before {
+    margin-right: .25rem;
+  }
+
+  & > .project > .dropdown > .list > a > .info > .item.-blue {
+    color: $color-twitter;
+  }
+
+  & > .project > .dropdown > .list > a > .info > .item.-green {
+    color: $color-brand;
+  }
+
+  & > .project > .dropdown > .list > hr {
+    margin: .5rem 0;
+
+    color: $color-grayish;
+  }
+
+  & > .project > .breadcrumb {
+    display: flex;
+    align-items: center;
+
+    margin-top: .25rem;
+  }
+
+  & > .project > .breadcrumb > * + * {
+    margin-left: .5rem;
+  }
+
+  & > .project > .breadcrumb > a {
+    font-size: $font-size-micro;
+
+    display: flex;
+    align-items: center;
+
+    color: $color-deep-gray;
+
+    &:hover {
+      text-decoration: underline;
+
+      color: $color-brand;
     }
+  }
 
-    & > .dropdown {
-      position: relative;
+  & > .project > .breadcrumb > a:not(:first-child)::before {
+    display: inline-block;
 
-      display: flex;
-      align-items: center;
+    width: .375rem;
+    height: .375rem;
+    margin-right: .5rem;
 
-      margin-top: .25rem;
-      margin-right: 1rem;
+    content: '';
 
-      cursor: pointer;
-
-      &::after {
-        display: inline-flex;
-
-        width: .75rem;
-        height: .75rem;
-        margin-left: .25rem;
-
-        content: '';
-
-        background-color: $color-deep-gray;
-
-        mask-image: url('../../static/img/arrow.svg');
-        mask-repeat: no-repeat;
-        mask-position: center;
-        mask-size: contain;
-      }
-
-      & > span {
-        font-size: $font-size-micro;
-
-        &.-closed {
-          @include mask-icon('padlock');
-
-          &::before {
-            margin-right: .25rem;
-
-            background-color: $color-deep-gray;
-          }
-        }
-      }
-
-      & > .list {
-        position: absolute;
-        top: 1.3rem;
-        left: -.2rem;
-
-        display: flex;
-        visibility: hidden;
-        overflow: hidden;
-        overflow-y: auto;
-        flex-direction: column;
-
-        width: 25rem;
-        max-height: 70vh;
-        padding: .5rem 0;
-
-        transition: all .3s ease-in-out 0s, visibility 0s linear .2s, z-index 0s linear .01s;
-        transform: translateY(-2%);
-
-        opacity: 0;
-        border: 1px solid $color-grayish;
-        background-color: #FFF;
-        box-shadow: 3px 3px 4px rgba(0, 0, 0, .08);
-
-        & > .title {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-
-          padding: .5rem 1.25rem;
-
-          cursor: text;
-
-          & > span {
-            font-size: $font-size-centi;
-            font-weight: bold;
-            line-height: 1.4;
-
-            color: $color-deep-gray;
-
-            &.-closed {
-              @include mask-icon('padlock');
-
-              &::before {
-                font-size: $font-size-micro;
-
-                margin-right: .35rem;
-
-                background-color: $color-deep-gray;
-              }
-            }
-          }
-
-          & > a {
-            font-size: $font-size-micro;
-
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            padding: .5rem 0;
-
-            cursor: pointer;
-            letter-spacing: .5px;
-
-            color: $color-brand;
-
-            &:hover {
-              opacity: .8;
-            }
-          }
-
-          & > .-add {
-            @include mask-icon('add');
-
-            &::before {
-              font-size: $font-size-nano;
-
-              margin-right: .35rem;
-
-              background-color: $color-brand;
-            }
-          }
-        }
-
-        & > a {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-
-          padding: 1rem 1.5rem;
-
-          color: $color-deep-gray;
-
-          &:hover {
-            & > span,
-            & > .info > .item {
-              color: $color-brand;
-            }
-
-            & > .info > .item::before {
-              background-color: $color-brand;
-            }
-          }
-
-          & > span {
-            font-size: $font-size-mili;
-            line-height: 1.4;
-          }
-
-          & > .info {
-            display: flex;
-            align-items: center;
-
-            & > * + * {
-              margin-left: .75rem;
-            }
-
-            & > .item {
-              font-size: $font-size-micro;
-
-              display: flex;
-              align-items: center;
-
-              &::before {
-                font-size: $font-size-micro;
-
-                background-color: $color-deep-gray;
-              }
-
-              &.-versions {
-                @include mask-icon('document');
-
-                &::before {
-                  margin-right: .25rem;
-                }
-              }
-
-              &.-participants {
-                @include mask-icon('avatar');
-
-                &::before {
-                  margin-right: .25rem;
-                }
-              }
-
-              &.-opinions {
-                @include mask-icon('comment-black');
-
-                &::before {
-                  margin-right: .25rem;
-                }
-              }
-
-              &.-blue {
-                color: $color-twitter;
-              }
-
-              &.-green {
-                color: $color-brand;
-              }
-            }
-          }
-        }
-
-        & > hr {
-          margin: .5rem 0;
-
-          color: $color-grayish;
-        }
-      }
-    }
-
-    & > .breadcrumb {
-      display: flex;
-      align-items: center;
-
-      margin-top: .25rem;
-
-      & > * + * {
-        margin-left: .5rem;
-      }
-
-      & > a {
-        font-size: $font-size-micro;
-
-        display: flex;
-        align-items: center;
-
-        color: $color-deep-gray;
-
-        &:hover {
-          text-decoration: underline;
-
-          color: $color-brand;
-        }
-
-        &:not(:first-child)::before {
-          display: inline-block;
-
-          width: .375rem;
-          height: .375rem;
-          margin-right: .5rem;
-
-          content: '';
-
-          opacity: .8;
-          border-radius: 50%;
-          background-color: $color-deep-gray;
-        }
-      }
-    }
+    opacity: .8;
+    border-radius: 50%;
+    background-color: $color-deep-gray;
   }
 }
