add error list in public participation modal

--- a/src/static/scss/components/_app-modal.scss
+++ b/src/static/scss/components/_app-modal.scss
@@ -79,11 +79,11 @@
       width: 80%;
       margin: 0 auto;
 
-      & > p {
+      & p {
         margin-top: 2rem;
       }
 
-      & > .app-button {
+      & .app-button {
         margin: 0 auto;
         margin-top: 2rem;
       }
