--- a/src/templates/components/public-participation-modal.html
+++ b/src/templates/components/public-participation-modal.html
@@ -9,15 +9,18 @@
 {% endblock %}
 
 {% block content %}
+<form>
 <h1>Data de encerramento</h1>
 <p>Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos.</p>
+<div class="js-formError"></div>
 <div class="input-text -date -required">
-  <input type="date" name="date" class="js-closingDate" maxlength="200" id="id_date">
+  <input type="date" name="date" class="js-closingDate" required maxlength="200" id="id_date">
   <label for="id_date">Data de encerramento</label>
 </div>
 <div class="input-text -congressman js-congressman -required" data-api-url="{{api_url}}" data-legislature="{{legislature}}">
-  <input class="js-inputAutocomplete" type="text" name="title" id="id_congressman">
+  <input class="js-inputAutocomplete" type="text" name="title" required id="id_congressman">
   <label for="id_congressman">Deputado responsavel</label>
 </div>
 <button class="app-button -green js-send">Enviar</button>
+</form>
 {% endblock content %}
