change error markup

--- a/src/templates/components/public-participation-modal.html
+++ b/src/templates/components/public-participation-modal.html
@@ -12,7 +12,7 @@
 <form>
 <h1>Data de encerramento</h1>
 <p>Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos.</p>
-<div class="js-formError"></div>
+<ul class="errorlist nonfield js-formError"></ul>
 <div class="input-text -date -required">
   <input type="date" name="date" class="js-closingDate" required maxlength="200" id="id_date">
   <label for="id_date">Data de encerramento</label>
