--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -51,6 +51,7 @@
 <script src="{% static '/js/utils/position.js' %}"></script>
 <script src="{% static '/js/vendor/silegismg-editor-articulacao-plain-js-polyfill.js' %}"></script>
 <script src="{% static '/js/components/infoMessage/view.js' %}"></script>
+<script src="{% static '/js/components/saveMessage/view.js' %}"></script>
 <script src="{% static '/js/components/documentEditor/controller.js' %}"></script>
 <script src="{% static '/js/components/documentEditor/view.js' %}"></script>
 <script src="{% static '/js/components/toolBar/controller.js' %}"></script>
