create js event to show filters

--- a/src/static/scss/components/_input-filter.scss
+++ b/src/static/scss/components/_input-filter.scss
@@ -68,13 +68,7 @@
       }
 
       & > .item {
-        cursor: pointer;
-
-        &:hover {
-          text-decoration: line-through;
-
-          color: $color-red;
-        }
+        font-size: $font-size-micro;
       }
     }
 
