--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -64,12 +64,9 @@
         <label for="name">Buscar perfis por nome ou email: </label>
         <div class="filter js-searchFilter">Filtros</div>
       </div>
-      <div class="filters _hidden">
+      <div class="filters js-filterBar _hidden">
         <span class="title js-title">Filtros adicionados:</span>
-        <ul class="list js-tags">
-          <span class="item">Filtro 1</span>
-          <span class="item">Filtro 2</span>
-          <span class="item">Filtro 3</span>
+        <ul class="list js-filterList">
         </ul>
         <div class="clear js-clearFilters">Limpar Filtros</div>
       </div>
