Add new components

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -39,6 +39,9 @@
 @import 'components/submitted-opinion';
 @import 'components/document-form';
 @import 'components/theme-tag';
+@import 'components/app-tag';
+@import 'components/document-progress';
+@import 'components/progress-bar';
 @import 'components/section-group';
 @import 'components/input-profile';
 @import 'components/user-profile';
